--- a/templates/normalisasiResult.html
+++ b/templates/normalisasiResult.html
@@ -9,7 +9,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0">Data Penilaian</h1>
+                    <h1 class="m-0">Data Penilaian Hasil Normalisasi</h1>
                 </div>
 
             </div>
@@ -46,11 +46,15 @@
                                                 <div class="form-group">
                                                     <label>Pilih tahun data yang mau dicluster</label>
                                                     <select class="custom-select" name="dataSelect">
-                                                  <option>Semua data</option>
-                                                  <option>2021</option>
+                                                  
                                                   <option>2022</option>
                                                   <option>2023</option>                  
                                                 </select>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label>Jumlah cluster (k) </label>
+                                                    <input type="number" class="form-control" name="k"  >
                                                 </div>
                                             </div>
                                         </div>
