--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -1,3 +1,4 @@
+{% set active_page = "clusteringResult" %}
 {%include 'header.html'%}
 <script src='https://cdn.plot.ly/plotly-2.14.0.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
@@ -190,139 +191,6 @@
 <script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.print.min.js' ) }}"></script>
 <script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.colVis.min.js' ) }}"></script>
 <script>
-    
-    window.onload = function() {
-    
-    {% if count2023 is defined %}
-    var dataset = {{ count2022 | tojson }};
-    var dataset2023 = {{count2023 | tojson}};
-    var button_layer_2_height = 1.2
-    var data = [{
-        values: [dataset[0],dataset[1],dataset[2],dataset[3]],
-        labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
-        domain: {
-            column: 0
-        },
-        name: 'Count',
-        
-        hoverinfo: 'label+percent+name+values',
-        hole: .4,
-        type: 'pie'
-    },
-    {
-        values: [dataset2023[0],dataset2023[1],dataset2023[2],dataset2023[3]],
-        labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
-        domain: {
-            column: 0
-        },
-        name: 'Count',
-        visible:false,
-        hoverinfo: 'label+percent+name+values',
-        hole: .4,
-        type: 'pie'
-    }
-    ];
-
-    
-    var updatemenus=[
-        {
-            buttons:[
-                {
-                    args:[{'visible':[true,false]},
-                    {'title': 'Count of 2022'}
-                ],
-                label : "2022",
-                method:"update"
-                },
-                {
-                    args:[{'visible':[false,true]},
-                    {'title': 'Count of 2023'}
-                ],
-                label : "2023",
-                method:"update"
-                }
-
-            ],
-            direction: 'left',
-            pad: {'r': 10, 't': 10},
-            showactive: true,
-            type: 'buttons',
-            x: 0.1,
-            xanchor: 'left',
-            y: button_layer_2_height,
-            yanchor: 'top'
-        }
-
-    ]
-    var layout = {
-        title: 'Count of Each Cluster',
-        updatemenus:updatemenus,
-        annotations: [{
-            font: {
-                size: 20
-            },
-            showarrow: false,
-            text: 'Count',
-            x: 0.17,
-            y: 0.5
-        }],
-        height: 400,
-        width: 600,
-        showlegend: true,
-        grid: {
-            rows: 1,
-            columns: 2
-        }
-    
-    };
-
-    Plotly.newPlot('donutCluster', data, layout);
-    {%else%}
-    var dataset = {{ count2022 | tojson }};
-   
-    var button_layer_2_height = 1.2
-    var data = [{
-        values: [dataset[0],dataset[1],dataset[2],dataset[3]],
-        labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
-        domain: {
-            column: 0
-        },
-        name: 'Count',
-        
-        hoverinfo: 'label+percent+name+values',
-        hole: .4,
-        type: 'pie'
-    }
-    ];
-
-    var layout = {
-        title: 'Count of Each Cluster',
-        annotations: [{
-            font: {
-                size: 20
-            },
-            showarrow: false,
-            text: 'Count',
-            x: 0.17,
-            y: 0.5
-        }],
-        height: 400,
-        width: 600,
-        showlegend: true,
-        grid: {
-            rows: 1,
-            columns: 2
-        }
-    
-    };
-
-    Plotly.newPlot('donutCluster', data, layout);
-
-    {%endif%}
-
-};
-    
-    
 
     if ( ! $.fn.DataTable.isDataTable( '#clustering' ) ) {
     $('#clustering').dataTable({
@@ -417,168 +285,7 @@
     });
 
 </script>
-<script>
 
-    var column = ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'];
-    {% if meanList2023 is defined %}
-    var dataset2 = {{ meanList2022| tojson }};
-    var dataset3 =  {{meanList2023 | tojson}};
-    
-    console.log(dataset2)
-
-    var trace1 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][0],dataset2[1][0],dataset2[2][0],dataset2[3][0],dataset2[4][0],dataset2[5][0],dataset2[6][0],dataset2[7][0]],
-        mode:'lines',
-        name:'Cluster 1',
-        type: 'scatter'
-    };
-
-    var trace2 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][1],dataset2[1][1],dataset2[2][1],dataset2[3][1],dataset2[4][1],dataset2[5][1],dataset2[6][1],dataset2[7][1]],
-        name:'Cluster 2',
-        type: 'scatter'
-    };
-    var trace3 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][2],dataset2[1][2],dataset2[2][2],dataset2[3][2],dataset2[4][2],dataset2[5][2],dataset2[6][2],dataset2[7][2]],
-        mode:'lines',
-        name:'Cluster 3',
-        type: 'scatter'
-    };
-    var trace4 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][3],dataset2[1][3],dataset2[2][3],dataset2[3][3],dataset2[4][3],dataset2[5][3],dataset2[6][3],dataset2[7][3]],
-        mode:'lines',
-        name:'Cluster 4',
-        type: 'scatter'
-    };
-
-    var trace5 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset3[0][0],dataset3[1][0],dataset3[2][0],dataset3[3][0],dataset3[4][0],dataset3[5][0],dataset3[6][0],dataset3[7][0]],
-        mode:'lines',
-        name:'Cluster 1',
-        type: 'scatter',
-        visible:false
-    };
-
-    var trace6 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset3[0][1],dataset3[1][1],dataset3[2][1],dataset3[3][1],dataset3[4][1],dataset3[5][1],dataset3[6][1],dataset3[7][1]],
-        name:'Cluster 2',
-        type: 'scatter',
-        visible:false
-    };
-    var trace7 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset3[0][2],dataset3[1][2],dataset3[2][2],dataset3[3][2],dataset3[4][2],dataset3[5][2],dataset3[6][2],dataset3[7][2]],
-        mode:'lines',
-        name:'Cluster 3',
-        type: 'scatter',
-        visible:false
-    };
-    var trace8 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset3[0][3],dataset3[1][3],dataset3[2][3],dataset3[3][3],dataset3[4][3],dataset3[5][3],dataset3[6][3],dataset3[7][3]],
-        mode:'lines',
-        name:'Cluster 4',
-        type: 'scatter',
-        visible:false
-    };
-   
-    var data = [trace1, trace2,trace3, trace4, trace5, trace6, trace7,trace8];
-    //var data = [trace1, trace2,trace3, trace4]
-    var button_layer_2_height = 1.2
-    
-    var updatemenus=[
-        {
-            buttons:[
-                {
-                    args:[{'visible':[true,true, true, true, false, false,false,false]},
-                    {'title': 'Mean of 2022'}
-                ],
-                label : "2022",
-                method:"update"
-                },
-                {
-                    args:[{'visible':[false,false, false, false, true, true, true,true]},
-                    {'title': 'Mean of 2023'}
-                ],
-                label : "2023",
-                method:"update"
-                }
-
-            ],
-            direction: 'left',
-            pad: {'r': 10, 't': 10},
-            showactive: true,
-            type: 'buttons',
-            x: 0.1,
-            xanchor: 'left',
-            y: button_layer_2_height,
-            yanchor: 'top'
-        }
-
-    ]
-    var layout={
-        title:"Rata-rata nilai tiap cluster",
-        updatemenus:updatemenus,
-        xaxis:{
-            type:'category'
-        }
-    }
-    Plotly.newPlot('linechartYear', data,layout);
-    {%else%}
-    var dataset2 = {{ meanList2022| tojson }};
-
-    var trace1 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][0],dataset2[1][0],dataset2[2][0],dataset2[3][0],dataset2[4][0],dataset2[5][0],dataset2[6][0],dataset2[7][0]],
-        mode:'lines',
-        name:'Cluster 1',
-        type: 'scatter'
-    };
-
-    var trace2 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][1],dataset2[1][1],dataset2[2][1],dataset2[3][1],dataset2[4][1],dataset2[5][1],dataset2[6][1],dataset2[7][1]],
-        name:'Cluster 2',
-        type: 'scatter'
-    };
-    var trace3 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][2],dataset2[1][2],dataset2[2][2],dataset2[3][2],dataset2[4][2],dataset2[5][2],dataset2[6][2],dataset2[7][2]],
-        mode:'lines',
-        name:'Cluster 3',
-        type: 'scatter'
-    };
-    var trace4 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset2[0][3],dataset2[1][3],dataset2[2][3],dataset2[3][3],dataset2[4][3],dataset2[5][3],dataset2[6][3],dataset2[7][3]],
-        mode:'lines',
-        name:'Cluster 4',
-        type: 'scatter'
-    };
-   
-    var data = [trace1, trace2,trace3, trace4];
-
-    var button_layer_2_height = 1.2
-   
-    var layout={
-        title:"Rata-rata nilai tiap cluster",
-        xaxis:{
-            type:'category'
-        }
-    }
-    Plotly.newPlot('linechartYear', data,layout);
-    {%endif%}
-    
-</script>
-<script>
-    
-</script>
 
 <!-- /.content-wrapper -->
 {% include 'footer.html'%}
