--- a/templates/dataKaryawan.html
+++ b/templates/dataKaryawan.html
@@ -1,3 +1,4 @@
+{% set active_page = "dataKaryawan" %}
 {%include 'header.html'%}
 
 <script src='https://cdn.plot.ly/plotly-2.14.0.min.js'></script>
